Nombre del app y elevacion solo android

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <FlexboxLayout class="page">
 
-    <StackLayout class="form ico">
+    <StackLayout class="form ico elevation" androidElevation="4">
 
         <Image src="~/assets/images/logo.png"></Image>
 
