--- a/src/app/pages/cotizaciones/ordenes-detalle/ordenes-detalle.component.html
+++ b/src/app/pages/cotizaciones/ordenes-detalle/ordenes-detalle.component.html
@@ -6,7 +6,7 @@
 
 <GridLayout class="page">
 
-    <GridLayout rows="auto,*, 80" class="main-container visible" *ngIf="!isLoading">
+    <GridLayout rows="auto,*, 80" class="main-container visible elevation" androidElevation="6" *ngIf="!isLoading">
 
         <GridLayout row="0" rows="*">
             <GridLayout rows="auto, auto" columns="auto, auto" class="date-container">
