--- a/src/app.css
+++ b/src/app.css
@@ -24,17 +24,11 @@ THEME BUILDER
 .page {
     /* background-color: #f8f0ee; */
     /* background-image: url("~/assets/images/background.png"); */
-    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ef424c+0,2989d8+50,207cca+51,2d3440+100 */
     background: #ef424c;
-    /* Old browsers */
     background: -moz-linear-gradient(45deg, #ef424c 0%, #2989d8 50%, #207cca 51%, #2d3440 100%);
-    /* FF3.6-15 */
     background: -webkit-linear-gradient(45deg, #ef424c 0%, #2989d8 50%, #207cca 51%, #2d3440 100%);
-    /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(45deg, #ef424c 0%, #2989d8 50%, #207cca 51%, #2d3440 100%);
-    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#ef424c', endColorstr='#2d3440', GradientType=1);
-    /* IE6-9 fallback on horizontal gradient */
 }
 
 .img-circle {
@@ -124,6 +118,13 @@ THEME BUILDER
 .invalid {
     color: #ef424c;
     border-bottom-color: #ef424c;
+}
+
+.elevation {
+    padding: 0;
+    border-width: 5;
+    border-radius: 7;
+    border-color: transparent;
 }
 
 .visible {
