--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -1,7 +1,7 @@
 <ns-action-bar title="Perfil" class="action-bar" [showBackButton]="false"></ns-action-bar>
 <ScrollView class="page">
 
-    <GridLayout class="card" height="" rows="auto auto">
+    <GridLayout class="card" rows="auto auto">
 
         <GridLayout row="0" rows="auto , auto, auto, auto" class="form">
 
