--- a/src/app.css
+++ b/src/app.css
@@ -23,12 +23,14 @@ THEME BUILDER
 
 .page {
     /* background-color: #f8f0ee; */
-    /* background-image: url("~/assets/images/background.png"); */
-     background: #ef424c;
+    background-image: url("~/assets/images/background.png");
+    /* uso de gradientes de colorzilla */
+    /* background: #ef424c;
     background: -moz-linear-gradient(45deg, #ef424c 0%, #2989d8 50%, #207cca 51%, #2d3440 100%);
     background: -webkit-linear-gradient(45deg, #ef424c 0%, #2989d8 50%, #207cca 51%, #2d3440 100%);
     background: linear-gradient(45deg, #ef424c 0%, #2989d8 50%, #207cca 51%, #2d3440 100%);
-    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#ef424c', endColorstr='#2d3440', GradientType=1); 
+    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#ef424c', endColorstr='#2d3440', GradientType=1);  
+    */
 }
 
 .img-circle {
@@ -124,14 +126,12 @@ THEME BUILDER
     border-width: 0;
     border-radius: 7;
     border-color: transparent;
-
 }
 
 .visible {
     animation-name: show;
     animation-duration: 1s;
     animation-fill-mode: forwards;
-
 }
 
 @keyframes show {
