--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -7,6 +7,7 @@
 
             <StackLayout row="0">
                 <Image class="img-profile img-circle" [src]="usuario.img | imagen"></Image>
+                <!-- <Image class="img-profile img-circle" src="~/assets/images/profile.png"></Image> -->
             </StackLayout>
 
             <GridLayout class="margen" row="1" rows="auto" columns="40, *, auto">
