--- a/src/app/pages/productos/productos.component.css
+++ b/src/app/pages/productos/productos.component.css
@@ -141,3 +141,43 @@
             transform: translateY(0);
         }
     }
+    
+    .lightSpeedIn {
+        animation-name: lightSpeedIn;
+        animation-iteration-count: 1;
+        animation-duration: 0.3s;
+        animation-fill-mode: forwards;
+    }
+    
+    @keyframes lightSpeedIn {
+        from {
+            transform: translate3d(100%, 0, 0) skewX(-30deg);
+            opacity: 0;
+        }
+        60% {
+            transform: skewX(20deg);
+            opacity: 1;
+        }
+        80% {
+            transform: skewX(-5deg);
+            opacity: 1;
+        }
+        to {
+            transform: translate3d(0, 0, 0);
+            opacity: 1;
+        }
+    }
+    /* @keyframes lightSpeedOut {
+        from {
+            opacity: 1;
+        }
+        to {
+            transform: translate3d(100%, 0, 0) skewX(30deg);
+            opacity: 0;
+        }
+    }
+    
+    .lightSpeedOut {
+        animation-name: lightSpeedOut;
+        animation-timing-function: ease-in;
+    } */
