--- a/src/app/pages/perfil/perfil.component.css
+++ b/src/app/pages/perfil/perfil.component.css
@@ -25,5 +25,15 @@
 }
 
 .margen-linea {
-    margin-top: 20;
+    margin-top: 10;
+}
+
+.txt-version {
+    text-align: center;
+    font-size: 11;
+    margin-bottom: 5;
+}
+
+.txt-usuario {
+    font-size: 15;
 }
