--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -1,49 +1,51 @@
 <ns-action-bar title="Perfil" class="action-bar" [showBackButton]="false"></ns-action-bar>
 <ScrollView class="page">
 
-    <GridLayout class="card" rows="auto auto">
+    <StackLayout class="card elevation" androidElevation="4">
 
-        <GridLayout row="0" rows="auto , auto, auto, auto" class="form">
+        <StackLayout class="form">
 
-            <StackLayout row="0">
+            <StackLayout>
                 <Image class="img-profile img-circle" [src]="usuario.img | imagen"></Image>
                 <!-- <Image class="img-profile img-circle" src="~/assets/images/profile.png"></Image> -->
             </StackLayout>
 
-            <GridLayout class="margen" row="1" rows="auto" columns="40, *, auto">
-                <Label class="ico icon-2x text-primary text-center" [text]="iconNombre" row="0" col="0"></Label>
+            <GridLayout class="margen" rows="auto" columns="40, *, 40">
+                <Label class="ico icon-1x text-primary text-center" [text]="iconNombre" row="0" col="0"></Label>
                 <StackLayout row="0" col="1">
                     <Label class="h5" text="Nombre" textWrap="true"></Label>
-                    <Label class="" [text]="usuario.nombre" textWrap="true"></Label>
+                    <Label class="txt-usuario" [text]="usuario.nombre" textWrap="true"></Label>
                     <StackLayout class="hr-light margen-linea"></StackLayout>
                 </StackLayout>
-                <Label class="ico icon-2x text-muted text-center" [text]="iconEditar" (tap)="modificar('Nombre', usuario)" row="0" col="2"></Label>
+                <Label class="ico icon-1x text-muted text-center" [text]="iconEditar" (tap)="modificar('Nombre', usuario)" row="0" col="2"></Label>
             </GridLayout>
 
-            <GridLayout class="margen" row="2" rows="auto" columns="40, *, auto">
-                <Label class="ico icon-2x text-primary text-center" [text]="iconEmail" row="0" col="0"></Label>
+            <GridLayout class="margen" rows="auto" columns="40, *, 40">
+                <Label class="ico icon-1x text-primary text-center" [text]="iconEmail" row="0" col="0"></Label>
                 <StackLayout row="0" col="1">
                     <Label class="h5" text="Correo Electrónico" textWrap="true"></Label>
-                    <Label class="" [text]="usuario.email" textWrap="true"></Label>
+                    <Label class="txt-usuario" [text]="usuario.email" textWrap="true"></Label>
                     <StackLayout class="hr-light margen-linea"></StackLayout>
                 </StackLayout>
-                <Label class="ico icon-2x text-muted text-center" [text]="iconEditar" (tap)="modificar('Correo Electrónico', usuario)" row="0" col="2"></Label>
+                <Label class="ico icon-1x text-muted text-center" [text]="iconEditar" (tap)="modificar('Correo Electrónico', usuario)" row="0" col="2"></Label>
             </GridLayout>
 
-            <GridLayout class="margen" row="3" rows="auto" columns="40, *, auto">
-                <Label class="ico icon-2x text-primary text-center" [text]="iconTelefono" row="0" col="0"></Label>
+            <GridLayout class="margen" rows="auto" columns="40, *, 40">
+                <Label class="ico icon-1x text-primary text-center" [text]="iconTelefono" row="0" col="0"></Label>
                 <StackLayout row="0" col="1">
                     <Label class="h5" text="Teléfono" textWrap="true"></Label>
-                    <Label class="" [text]="usuario.telefono" textWrap="true"></Label>
+                    <Label class="txt-usuario" [text]="usuario.telefono" textWrap="true"></Label>
                     <StackLayout class="hr-light margen-linea"></StackLayout>
                 </StackLayout>
-                <Label class="ico icon-2x text-muted text-center" [text]="iconEditar" (tap)="modificar('Telefono', usuario)" row="0" col="2"></Label>
+                <Label class="ico icon-1x text-muted text-center" [text]="iconEditar" (tap)="modificar('Telefono', usuario)" row="0" col="2"></Label>
             </GridLayout>
 
-        </GridLayout>
+        </StackLayout>
 
-        <Button row="1" text="Cerrar Sesión" class="btn btn-flat btn-text btn-active" (tap)="salir()"></Button>
+        <Button text="Cerrar Sesión" class="btn btn-flat btn-text btn-active" (tap)="salir()"></Button>
 
-    </GridLayout>
+        <Label class="txt-version" text="Digital Ads v1.0.0"></Label>
+
+    </StackLayout>
 
 </ScrollView>
