Arreglo de estilos en pantalla grandes mayores  16:9

--- a/src/app/pages/productos/producto-detalle/producto.component.html
+++ b/src/app/pages/productos/producto-detalle/producto.component.html
@@ -3,7 +3,7 @@
 <ScrollView class="page">
 
 
-    <GridLayout rows="*,*" columns="*" class="p-y-5 visible" *ngIf="!isLoading">
+    <GridLayout rows="*,*" columns="*" class="p-y-5 centrado-vertical" *ngIf="!isLoading">
 
         <StackLayout row="0" col="0" class="card elevation" androidElevation="6">
 
