--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -21,7 +21,7 @@
 
 </ns-action-bar>
 
-<GridLayout class="page">
+<GridLayout class="page" vertical-align="center">
 
     <StackLayout class="vacio" *ngIf="productos.length == 0">
         <Label [text]="iconProductos" class="ico icon-5x" textWrap="true"></Label>
