--- a/src/app.css
+++ b/src/app.css
@@ -26,6 +26,10 @@
     */
 }
 
+.centrado-vertical {
+    vertical-align: center;
+}
+
 .img-circle {
     border-radius: 100%;
     border-width: 2;
@@ -36,7 +40,8 @@
     background-color: transparent;
     border-color: transparent;
     border-width: 1;
-    padding: 1;
+    padding: 0;
+    margin: 0;
     z-index: 0;
 }
 
@@ -49,8 +54,9 @@
 .btn-small {
     font-size: 12;
     font-weight: bold;
-    height: 20;
-    padding: 1;
+    height: 30;
+    padding: 0;
+    margin: 0;
 }
 
 .label-recargar {
@@ -66,7 +72,7 @@
 
 .label-description {
     font-size: 12;
-    height: 15;
+    /* height: 15 */
 }
 
 .badge {
