--- a/src/app/pages/perfil/perfil.component.css
+++ b/src/app/pages/perfil/perfil.component.css
@@ -1,8 +1,7 @@
 .form {
     margin-left: 20;
     margin-right: 20;
-    flex-grow: 2;
-    vertical-align: middle;
+    vertical-align: center;
     font-size: 18;
 }
 
