--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -1,13 +1,13 @@
 <ns-action-bar title="Perfil" class="action-bar" [showBackButton]="false"></ns-action-bar>
 <ScrollView class="page">
 
-    <StackLayout class="card elevation" androidElevation="4">
+    <StackLayout class="card elevation centrado-vertical" androidElevation="4">
 
         <StackLayout class="form">
 
             <StackLayout>
                 <Image class="img-profile img-circle" [src]="usuario.img | imagen"></Image>
-                <!-- <Image class="img-profile img-circle" src="~/assets/images/profile.png"></Image> -->
+                <!-- <Image class="img-profile img-circle" src="~/assets/images/profile.png"></Image>  -->
             </StackLayout>
 
             <GridLayout class="margen" rows="auto" columns="40, *, 40">
