plugin imagePicker y servicio para subir imagen

--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -6,7 +6,7 @@
         <StackLayout class="form">
 
             <StackLayout>
-                <Image class="img-profile img-circle" [src]="usuario.img | imagen"></Image>
+                <Image class="img-profile img-circle" [src]="usuario.img | imagen" (tap)="onSelectSingleTap()"></Image>
                 <!-- <Image class="img-profile img-circle" src="~/assets/images/profile.png"></Image>  -->
             </StackLayout>
 
