Algunos estilos para dispositivos ios

--- a/src/app.css
+++ b/src/app.css
@@ -30,6 +30,10 @@
     vertical-align: center;
 }
 
+.centrado-horizontal {
+    horizontal-vertical: center;
+}
+
 .img-circle {
     border-radius: 100%;
     border-width: 2;
