--- a/src/app/pages/productos/producto-detalle/producto.component.html
+++ b/src/app/pages/productos/producto-detalle/producto.component.html
@@ -22,14 +22,14 @@
         <GridLayout row="1" col="0" rows="*" columns="*,*">
             <GridLayout row="0" col="0" rows="*,*, auto" class="card-cotizar elevation" androidElevation="4">
 
-                <Label row="0" col="0" class="h5" text="Cotiza el producto"></Label>
+                <Label row="0" col="0" text="Cotiza el producto"></Label>
                 <StackLayout row="1" class="hr-light m-b-12"></StackLayout>
 
                 <StackLayout row="2" *ngIf="!rotulos && !rotulos3D">
 
-                    <Label class="h4" text="Cantidad:" textWrap="true"></Label>
+                    <Label text="Cantidad:" textWrap="true"></Label>
 
-                    <GridLayout class="m-y-12" columns="50,40,50">
+                    <GridLayout class="m-y-12 centrado-horizontal" columns="50,40,50">
                         <Button col="0" [text]="iconMenos" class="btn icon-cantidad ico icon-3x btn-active" (tap)="variarPrecio(-1)"></Button>
                         <Label col="1" class="input-cantidad p-t-10 animate-transition-up" [text]="cantidad"></Label>
                         <Button col="2" [text]="iconMas" class="btn icon-cantidad ico icon-3x btn-active" (tap)="variarPrecio(+1)"></Button>
@@ -70,10 +70,10 @@
             <GridLayout row="1" col="1" rows="*,*,*,*,*,*" columns="*" class="card-cotizar elevation" androidElevation="6">
                 <Label row="0" text="Costo"></Label>
                 <StackLayout row="1" class="hr-light"></StackLayout>
-                <Label *ngIf="aparecer" col="0" row="2" class="h3 text-danger text-center animate-transition-up m-y-10" textWrap="true" text="${{precioFinal | number:'.2-2'}}"></Label>
+                <Label *ngIf="aparecer" col="0" row="2" class=" m-y-12h3 text-danger text-center animate-transition-up" textWrap="true" text="${{precioFinal | number:'.2-2'}}"></Label>
                 <Label row="3" text="Realizar Pedido:"></Label>
                 <StackLayout row="4" class="hr-light"></StackLayout>
-                <Button col="0" row="5" [isEnabled]="activar || !rotulos && !rotulos3D" [text]="iconCarrito" class=" btn ico icon-cart-add icon-2x btn-active" width="50" (tap)="agregarPedido()"></Button>
+                <Button col="0" row="5" [isEnabled]="activar || !rotulos && !rotulos3D" [text]="iconCarrito" class=" m-y-12 btn ico icon-cart-add icon-2x btn-active" width="50" (tap)="agregarPedido()"></Button>
             </GridLayout>
         </GridLayout>
 
