Arreglos en animacion y estilos

--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -1,7 +1,7 @@
 <ns-action-bar title="Perfil" class="action-bar" [showBackButton]="false"></ns-action-bar>
 <ScrollView class="page">
 
-    <StackLayout class="card elevation centrado-vertical" androidElevation="4">
+    <StackLayout class="card elevation centrado-vertical visible" androidElevation="4">
 
         <StackLayout class="form">
 
