--- a/src/app/pages/cotizaciones/cotizaciones.component.html
+++ b/src/app/pages/cotizaciones/cotizaciones.component.html
@@ -2,7 +2,7 @@
 
 <GridLayout class="page">
 
-    <StackLayout class="vacio" *ngIf="cotizaciones.length == 0">
+    <StackLayout class="vacio visible" *ngIf="cotizaciones.length == 0">
         <Label [text]="iconCotizaciones" class="txt-white icon-5x ico" textWrap="true"></Label>
         <Label text="Sin Cotizaciones" class="txt-white p-t-10" textWrap="true"></Label>
         <Button [visibility]="!isLoading ? 'visible' : 'collapse'" text="Recargar... {{iconRefresh}}" class="ico btn btn-flat btn-active label-recargar m-t-10" (tap)="recargar()"></Button>
@@ -10,7 +10,7 @@
     </StackLayout>
 
 
-    <GridLayout rows="*" *ngIf="cotizaciones.length != 0">
+    <GridLayout rows="*" class="visible" *ngIf="cotizaciones.length != 0">
 
         <RadListView class="m-y-5" [items]="cotizaciones" pullToRefresh="true" (pullToRefreshInitiated)="onPullToRefreshInitiated($event)">
             <ng-template tkListItemTemplate let-cotizacion="item" let-i="index">
