--- a/src/app/pages/cotizaciones/cotizaciones.component.html
+++ b/src/app/pages/cotizaciones/cotizaciones.component.html
@@ -1,4 +1,4 @@
-<ns-action-bar title="Cotizaciones" class="action-bar" [showBackButton]="false"></ns-action-bar>
+<ns-action-bar title="Cotizaciones y Pedidos" class="action-bar" [showBackButton]="false"></ns-action-bar>
 
 <GridLayout class="page">
 
