--- a/src/app/pages/tabs-nav/tabs-nav.component.html
+++ b/src/app/pages/tabs-nav/tabs-nav.component.html
@@ -5,7 +5,7 @@
         <TabStripItem class="tabstripitem-active" title="Inicio" iconSource="res://home"></TabStripItem>
         <TabStripItem class="tabstripitem-active" title="Pedidos" iconSource="res://cot"></TabStripItem>
         <TabStripItem class="tabstripitem-active" title="Perfil" iconSource="res://account"></TabStripItem>
-        <!-- Icon font con problemas en el estilo bug ns v6.0 -->
+        <!-- TODO: Icon font con problemas en el estilo bug ns v6.0 -->
         <!-- <TabStripItem class="tabstripitem-active ico ico-font" title="Inicio" iconSource="font://&#xe88a;"></TabStripItem>
         <TabStripItem class="tabstripitem-active ico ico-font" title="Pedidos" iconSource="font://&#xe242;"></TabStripItem>
         <TabStripItem class="tabstripitem-active ico ico-font" title="Perfil" iconSource="font://&#xe853;"></TabStripItem> -->
