--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,11 +1,17 @@
-<FlexboxLayout class="page">
+<FlexboxLayout>
 
     <StackLayout class="form ico elevation" androidElevation="4">
 
         <Image src="~/assets/images/logo.png"></Image>
 
-        <TextField [isEnabled]="!_usuarioService.processing" hint="{{iconEmail}} Correo Electrónico" keyboardType="email" returnKeyType="next" autocorrect="false" autocapitalizationType="none" [(ngModel)]="email" class="input input-rounded ico" required></TextField>
-        <TextField [isEnabled]="!_usuarioService.processing" hint="{{iconPassword}} Contraseña" secure="true" returnKeyType="done" [(ngModel)]="password" class="ico input input-rounded" required></TextField>
+        <GridLayout rows="auto, auto" columns="25, *">
+            <Label [text]="iconEmail" row="0" col="0" class="ico"></Label>
+            <TextField row="0" col="1" [isEnabled]="!_usuarioService.processing" hint="Correo Electrónico" keyboardType="email" returnKeyType="next" autocorrect="false" autocapitalizationType="none" [(ngModel)]="email" class="input input-rounded" required></TextField>
+            <Label [text]="iconPassword" row="1" col="0" class="ico"></Label>
+            <TextField row="1" col="1" [isEnabled]="!_usuarioService.processing" hint="Contraseña" secure="true" returnKeyType="done" [(ngModel)]="password" class="input input-rounded" required></TextField>
+        </GridLayout>
+
+              
 
         <Button text="Ingresar a tu Cuenta" [isEnabled]="!_usuarioService.processing" class="btn-primary btn-active" (tap)="ingresar()"></Button>
 
