--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,14 +4,14 @@
 
         <Image src="~/assets/images/logo.png"></Image>
 
-        <GridLayout rows="auto, auto" columns="25, *">
-            <Label [text]="iconEmail" row="0" col="0" class="ico"></Label>
+        <GridLayout rows="auto, auto" columns="auto, *">
+            <Label [text]="iconEmail" row="0" col="0" class="ico icon-login"></Label>
             <TextField row="0" col="1" [isEnabled]="!_usuarioService.processing" hint="Correo Electrónico" keyboardType="email" returnKeyType="next" autocorrect="false" autocapitalizationType="none" [(ngModel)]="email" class="input input-rounded" required></TextField>
-            <Label [text]="iconPassword" row="1" col="0" class="ico"></Label>
+            <Label [text]="iconPassword" row="1" col="0" class="ico icon-login"></Label>
             <TextField row="1" col="1" [isEnabled]="!_usuarioService.processing" hint="Contraseña" secure="true" returnKeyType="done" [(ngModel)]="password" class="input input-rounded" required></TextField>
         </GridLayout>
 
-              
+
 
         <Button text="Ingresar a tu Cuenta" [isEnabled]="!_usuarioService.processing" class="btn-primary btn-active" (tap)="ingresar()"></Button>
 
