Aplicando Lazy Load a componentes Perfil y Carrito

--- a/src/app/pages/tabs-nav/tabs-nav.component.css
+++ b/src/app/pages/tabs-nav/tabs-nav.component.css
@@ -1,5 +1,10 @@
 TabStripItem.tabstripitem-active:active {
     color: #ef424c;
+    /* color: white; */
+}
+
+.bottom-nav {
+    background-color: #2d3440;
 }
 
 .ico-font {
