--- a/src/app/pages/tabs-nav/tabs-nav.component.html
+++ b/src/app/pages/tabs-nav/tabs-nav.component.html
@@ -1,7 +1,7 @@
 <BottomNavigation selectedIndex="0">
 
 
-    <TabStrip>
+    <TabStrip class="bottom-nav">
         <TabStripItem class="tabstripitem-active" title="Inicio" iconSource="res://home"></TabStripItem>
         <TabStripItem class="tabstripitem-active" title="Pedidos" iconSource="res://cot"></TabStripItem>
         <TabStripItem class="tabstripitem-active" title="Perfil" iconSource="res://account"></TabStripItem>
