--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -6,11 +6,9 @@
         <StackLayout class="form">
 
             <StackLayout vertical-align="center">
-                <!-- <Image *ngIf="!imagenActiva" class="img-profile img-circle" [src]="usuario.img | imagen" (tap)="onSelectSingleTap()"></Image> -->
-                <Image *ngIf="imagenActiva" class="img-profile img-circle" [src]="imagenSubir" (tap)="onSelectSingleTap()"></Image>
-                <!-- <Image class="img-profile img-circle" src="~/assets/images/profile.png"></Image>  -->
                 <Label class="avatar img-profile img-circle" *ngIf="!imagenActiva" [text]="avatar" (tap)="onSelectSingleTap()"></Label>
-
+                <!-- <Image *ngIf="imagenActiva" class="img-profile img-circle" [src]="usuario.img | imagen" (tap)="onSelectSingleTap()"></Image> -->
+                <Image *ngIf="imagenActiva " class="img-profile img-circle" [src]="imagenSubir" stretch="fill" (tap)="onSelectSingleTap()"></Image>
             </StackLayout>
 
             <GridLayout class="margen" rows="auto" columns="40, *, 40">
