--- a/src/app/pages/perfil/perfil.component.css
+++ b/src/app/pages/perfil/perfil.component.css
@@ -41,5 +41,5 @@
     color: white;
     font-size: 100;
     text-align: center;
-    background-color: #2d3440;
+    background-color: #222731;
 }
