--- a/src/app/pages/tabs-nav/tabs-nav.component.css
+++ b/src/app/pages/tabs-nav/tabs-nav.component.css
@@ -1,12 +1,19 @@
-TabStripItem.tabstripitem-active:active {
-    color: #ef424c;
-    /* color: white; */
+TabStripItem Label {
+    color: #2d3440;
 }
 
-.bottom-nav {
-    background-color: rgba(255, 255, 255, 0.555);
+TabStripItem:active Label {
+    color: #ef424c;
+}
+
+TabStripItem Image {
+    color: #2d3440;
+}
+
+TabStripItem:active Image {
+    color: #ef424c;
 }
 
 .ico-font {
-    font-size: 12;
+    font-size: 36;
 }
