--- a/src/app/pages/productos/producto-detalle/producto.component.html
+++ b/src/app/pages/productos/producto-detalle/producto.component.html
@@ -7,8 +7,8 @@
 
         <StackLayout row="0" col="0" class="card elevation" androidElevation="6">
 
-            <StackLayout class="card-layout">
-                <Image class="img-rounded" [src]="img | imagen:'producto'"></Image>
+            <StackLayout>
+                <Image class="img-rounded-card" [src]="img | imagen:'producto'"></Image>
             </StackLayout>
 
             <StackLayout class="card-layout-description-p">
@@ -71,9 +71,9 @@
                 <Label row="0" text="Costo"></Label>
                 <StackLayout row="1" class="hr-light"></StackLayout>
                 <Label *ngIf="aparecer" col="0" row="2" class=" m-y-11 h3 text-danger text-center animate-transition-up" textWrap="true" text="${{precioFinal | number:'.2-2'}}"></Label>
-                <Label row="3" text="Realizar Pedido:"></Label>
+                <Label row="3" text="Agregar a la lista de pedidos:" textWrap="true"></Label>
                 <StackLayout row="4" class="hr-light"></StackLayout>
-                <Button col="0" row="5" [isEnabled]="activar || !rotulos && !rotulos3D" [text]="iconCarrito" class=" m-y-11 btn ico icon-cart-add icon-2x btn-active" width="50" (tap)="agregarPedido()"></Button>
+                <Button col="0" row="5" [text]="iconCarrito" class=" m-y-11 btn ico icon-cart-add icon-2x btn-active" width="50" (tap)="agregarPedido()"></Button>
             </GridLayout>
         </GridLayout>
 
