--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -37,8 +37,8 @@
                 <StackLayout [nsRouterLink]="['/producto', producto._id]" pageTransition="slide">
 
                     <GridLayout class="card elevation" androidElevation="4">
-                        <StackLayout class="card-layout">
-                            <Image class="img img-rounded" [src]="producto.img | imagen:'producto'" loadMode="async"></Image>
+                        <StackLayout>
+                            <Image class="img-rounded" [src]="producto.img | imagen:'producto'" loadMode="async"></Image>
                         </StackLayout>
 
                         <StackLayout class="card-layout-description">
