--- a/src/app.css
+++ b/src/app.css
@@ -31,7 +31,7 @@
 }
 
 .centrado-horizontal {
-    horizontal-vertical: center;
+    horizontal-align: center;
 }
 
 .img-circle {
@@ -62,7 +62,7 @@
 
 .label-recargar {
     font-size: 12;
-    height: 18;
+    height: 50;
     width: 100;
 }
 
