--- a/src/app/pages/carrito/carrito.component.html
+++ b/src/app/pages/carrito/carrito.component.html
@@ -21,7 +21,7 @@
 
                 <GridLayout rows="auto, auto, auto, auto" columns="60, *, 60" class="order-details p-t-20">
 
-                    <Image class="img-circle imageList" [src]="orden.img | imagen:'producto'" stretch="fill"></Image>
+                    <Image class="img-circle imageList" [src]="orden.img | imagen:'producto'" stretch="fill" loadMode="async"></Image>
 
                     <Label col="1" class="order-taker" [text]="orden.nombre" textWrap="true"></Label>
 
